# swagger/docs.swagger.json
@@ -93,6 +93,45 @@
         ]
       }
     },
+    "/api/booking/v1/bookings/{id}/complete": {
+      "post": {
+        "operationId": "BookingService_CompleteBooking",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1CompleteBookingResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/BookingServiceCompleteBookingBody"
+            }
+          }
+        ],
+        "tags": [
+          "BookingService"
+        ]
+      }
+    },
     "/api/booking/v1/list-bookings": {
       "post": {
         "operationId": "BookingService_ListBookings",
@@ -420,6 +459,9 @@
     "BookingServiceCancelBookingBody": {
       "type": "object"
     },
+    "BookingServiceCompleteBookingBody": {
+      "type": "object"
+    },
     "UserServiceUpdateUserBody": {
       "type": "object",
       "properties": {
@@ -546,6 +588,9 @@
       "default": "BOOKING_STATUS_UNSPECIFIED"
     },
     "v1CancelBookingResponse": {
+      "type": "object"
+    },
+    "v1CompleteBookingResponse": {
       "type": "object"
     },
     "v1CreateBookingRequest": {
